@@ -15,6 +15,8 @@ our $VERSION = '1.06';
 
 my $PROTOCOL_RE = qr!^(\w+):\w+!i;    # Examples: mail:, spotify:, ...
 
+has force_secure => sub { $ENV{LINK_EMBEDDER_FORCE_SECURE} || 0 };
+
 has ua => sub { Mojo::UserAgent->new->max_redirects(3); };
 
 has url_to_link => sub {
@@ -51,7 +53,7 @@ sub get {
   })->catch(sub {
     my $err = pop // 'Unknown error.';
     $err = {message => "$err", code => 500} unless ref $err eq 'HASH';
-    $self->$cb(LinkEmbedder::Link->new(error => $err));
+    $self->$cb(LinkEmbedder::Link->new(error => $err, force_secure => $self->force_secure));
   });
 
   return $self;
@@ -61,9 +63,10 @@ sub get_p {
   my ($self, $args) = @_;
   my ($e, $link);
 
-  $args        = ref $args eq 'HASH' ? {%$args} : {url => $args};
-  $args->{url} = Mojo::URL->new($args->{url} || '') unless ref $args->{url};
-  $args->{ua}  = $self->ua;
+  $args                 = ref $args eq 'HASH' ? {%$args} : {url => $args};
+  $args->{force_secure} = $self->force_secure;
+  $args->{url}          = Mojo::URL->new($args->{url} || '') unless ref $args->{url};
+  $args->{ua}           = $self->ua;
 
   $link ||= delete $args->{class};
   $link ||= ucfirst $1 if $args->{url} =~ $PROTOCOL_RE;
@@ -73,7 +76,7 @@ sub get_p {
   $link = $link =~ /::/ ? $link : "LinkEmbedder::Link::$link";
   return $self->_invalid_input($args, "Could not find $link") unless _load($link);
 
-  warn "[LinkEmbedder] $link->new($args->{url})\n" if DEBUG;
+  warn "[$link] url=$args->{url})\n" if DEBUG;
   $link = $link->new($args);
   return $link->learn_p->then(sub { return $link });
 }
@@ -140,7 +143,8 @@ LinkEmbedder - Embed / expand oEmbed resources and other URL / links
 
   use LinkEmbedder;
 
-  my $embedder = LinkEmbedder->new;
+  my $embedder = LinkEmbedder->new(force_secure => 1);
+
   $embedder->get_p("https://xkcd.com/927")->then(sub {
     my $link = shift;
     print $link->html;
@@ -223,6 +227,15 @@ URLs that looks like a video resource is automatically converted into a video ta
 =back
 
 =head1 ATTRIBUTES
+
+=head2 force_secure
+
+  $bool = $self->force_secure;
+  $self = $self->force_secure(1);
+
+This attribute will translate any unknown http link to https.
+
+This attribute is EXPERIMENTAL. Feeback appreciated.
 
 =head2 ua
 
